@@ -44,6 +44,7 @@ __all__ = [
     "PDB_helix",
     "PDB_conect",
     "PDB_conect2TER",  # Conect record to a TER entry (Issue 936)
+    "PDB_singleconect",  # Conect record with one entry (Issue 937)
     "XPDB_small",
     "PDB_full",   # PDB 4E43 (full HEADER, TITLE, COMPND, REMARK, altloc)
     "ALIGN",  # Various way to align atom names in PDB files
@@ -174,6 +175,7 @@ PDB_multiframe = resource_filename(__name__, 'data/nmr_neopetrosiamide.pdb')
 PDB_helix = resource_filename(__name__, 'data/A6PA6_alpha.pdb')
 PDB_conect = resource_filename(__name__, 'data/conect_parsing.pdb')
 PDB_conect2TER = resource_filename(__name__, 'data/CONECT2TER.pdb')
+PDB_singleconect = resource_filename(__name__, 'data/SINGLECONECT.pdb')
 
 GRO = resource_filename(__name__, 'data/adk_oplsaa.gro')
 GRO_velocity = resource_filename(__name__, 'data/sample_velocity_file.gro')
